[project]
name = "MapReloader"
version = "1"
authors = [{ name = "Deceptix_" }]
description = "Adds a map reload function that can be bound to a keybind and/or replace the \"Quit to Main Menu\" button."

[tool.sdkmod]
name = "Map Reloader"
license = {name = "GPL3", url = "https://choosealicense.com/licenses/gpl-3.0/" }
download = ""
version = "1"